fix bug 90583. r=yokoyama sr=alecf ignore the invalid position of the cursor so the input method candidate window won't block the view of the current cursor.